added donuts, changed component CategoryList it get data from array

--- a/client/src/components/header/header.css
+++ b/client/src/components/header/header.css
@@ -64,3 +64,10 @@
   line-height: 3.3rem;
   text-align: center;
 }
+
+.header-donut {
+  width: 100px;
+  height: 100px;
+  border-radius: 20px;
+  margin: 10% 0 0 0;
+}
