--- a/client/src/components/header/header.css
+++ b/client/src/components/header/header.css
@@ -11,14 +11,14 @@
   width: 277px;
   height: 256px;
   position: absolute;
-  left: 5%;
-  top: 5%;
+  left: 9.25%;
+  top: 52px;
 }
 
 .header-search-block {
   display: flex;
   flex-direction: column;
-  margin: 10% 0 0 40%;
+  margin: 150px 0 0 40%;
   width: 20%;
 }
 
@@ -28,11 +28,33 @@
 }
 
 .header-category-list-block {
-  margin: 20px 0 0 0;
+  margin: 0;
+  display: flex;
+  position: relative;
+  padding: 0;
 }
 
 .header-category-list {
-  margin-top: 5px;
+  position: absolute;
+  top: 60px;
+  left: -30px;
+  list-style-type: none;
+}
+
+.header-category-arrow {
+  width: 20px;
+  height: 20px;
+  margin: auto 0 auto 10px;
+}
+
+.header-category-list-item {
+  background-color: #fe97c4;
+  cursor: pointer;
+  font-size: 1.5rem;
+}
+
+.header-category-title {
+  font-size: 2rem;
 }
 
 .header-login-button {
@@ -57,7 +79,7 @@
 
 .header-title {
   width: 50%;
-  margin: 5% auto 15%;
+  margin: 3% auto 15%;
   color: #fe97c4;
   font-size: 3rem;
   font-weight: 900;
@@ -68,6 +90,9 @@
 .header-donut {
   width: 100px;
   height: 100px;
-  border-radius: 20px;
   margin: 10% 0 0 0;
+}
+
+.donut-two {
+  margin-top: 11%;
 }
