--- a/client/src/components/header/header.css
+++ b/client/src/components/header/header.css
@@ -11,14 +11,14 @@
   width: 277px;
   height: 256px;
   position: absolute;
-  left: 9.25%;
-  top: 52px;
+  left: 15.25%;
+  top: 12px;
 }
 
 .header-search-block {
   display: flex;
   flex-direction: column;
-  margin: 150px 0 0 40%;
+  margin: 120px 0 0 40%;
   width: 20%;
 }
 
@@ -58,7 +58,7 @@
 }
 
 .header-login-button {
-  margin: 10% 0 0 10%;
+  margin: 5px;
   cursor: pointer;
   height: fit-content;
   text-decoration: none;
@@ -66,8 +66,16 @@
 }
 
 .header-favorites-button {
-  margin: 10% 0 0 1%;
+  margin: 5px;
+  height: 25px;
   cursor: pointer;
+}
+.header-buttons {
+  display: flex;
+  flex-direction: row;
+  width: 20vw;
+  height: 10vh;
+  justify-content: center;
 }
 
 .header-favorites-button-image {
@@ -76,7 +84,8 @@
 }
 
 .header-cart-button {
-  margin: 10% 0 0 1%;
+  margin: 5px;
+  height: 25px;
   cursor: pointer;
 }
 
@@ -96,11 +105,9 @@
 }
 
 .header-donut {
+  position: relative;
   width: 100px;
   height: 100px;
-  margin: 10% 0 0 0;
-}
-
-.donut-two {
-  margin-top: 11%;
+  top: 20%;
+  right: 15%;
 }
