moved inline styling from category area in home page and modified the styling

--- a/client/src/components/promotion/promotion.css
+++ b/client/src/components/promotion/promotion.css
@@ -7,11 +7,31 @@
 }
 
 .promotion-main-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   width: 70%;
 }
 
 .promotion-image {
-  width: 30%;
+  width: 30vw;
+}
+.promotion-title {
+  color: white;
+  width: 40vw;
+  font-size: 3.7rem;
+}
+
+.promotion-button {
+  color: white;
+  background-color: #f095c4;
+  border: none;
+  font-size: 15px;
+  width: 130px;
+  height: 45px;
+}
+.promotion-button:hover {
+  cursor: pointer;
 }
 
 .promotion-popup {
