--- a/client/src/index.css
+++ b/client/src/index.css
@@ -4,12 +4,24 @@ body {
   width: 100vw;
   height: 100vh;
 }
+
 .product-display-grid {
   display: flex;
   gap: 1em;
   flex-wrap: wrap;
 }
-
+.header-categories {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  background-color: #fee588;
+}
+.categories-title {
+  text-align: center;
+  color: #f095c4;
+  margin: 30px 0 50px 0;
+  font-size: 2.3rem;
+}
 .product-display-component {
   width: 18em;
   border: 1px solid #ccc;
