added suggestions to search

--- a/client/src/components/header/header.css
+++ b/client/src/components/header/header.css
@@ -104,3 +104,10 @@
 .donut-two {
   margin-top: 11%;
 }
+
+.header-search-suggestion-block {
+  position: absolute;
+  z-index: 10;
+  top: 40%;
+  background-color: #05e0dc;
+}
