--- a/client/src/components/category/categories.css
+++ b/client/src/components/category/categories.css
@@ -1,3 +1,9 @@
+.category-div {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  background-color: #fee588;
+}
 .categories-container {
   position: relative;
   width: 400px;
