--- a/client/src/components/Footer/Footer.css
+++ b/client/src/components/Footer/Footer.css
@@ -13,6 +13,7 @@ footer {
   position: relative;
   font-size: 15px;
   letter-spacing: 2px;
+  max-width: 100vw;
 }
 .footer-information {
   padding: 20px 100px;
@@ -35,6 +36,7 @@ footer {
   position: absolute;
   right: 150px;
   top: 75px;
+  width: 20vw;
 }
 .heart {
   color: red;
