--- a/client/src/components/header/header.css
+++ b/client/src/components/header/header.css
@@ -8,8 +8,8 @@
 }
 
 .header-logo {
-  width: 277px;
-  height: 256px;
+  width: 20vw;
+  max-width: 270px;
   position: absolute;
   left: 15.25%;
   top: 12px;
@@ -96,9 +96,10 @@
 
 .header-title {
   width: 50%;
+  max-width: 70vw;
   margin: 3% auto 15%;
   color: #fe97c4;
-  font-size: 3rem;
+  font-size: 3em;
   font-weight: 900;
   line-height: 3.3rem;
   text-align: center;
@@ -117,4 +118,35 @@
   z-index: 10;
   top: 40%;
   background-color: #05e0dc;
+}
+
+@media (max-width: 767px) {
+  /* styles for phones */
+  .header {
+    height: 30vh;
+  }
+  .header-logo {
+    left: 0px;
+  }
+  .header-search-block {
+    width: 50vw;
+    margin: 60px 0px 0px 100px;
+  }
+  .header-title {
+    width: 100vw;
+    margin: 0;
+    font-size: 1.2rem;
+    line-height: normal;
+  }
+  .header-donut {
+    /* position: absolute; */
+    top: 0;
+    right: 0;
+    float: left;
+    width: 10vw;
+  }
+}
+
+@media (min-width: 768px) and (max-width: 991px) {
+  /* styles for tablets */
 }
