--- a/client/src/components/Footer/Footer.css
+++ b/client/src/components/Footer/Footer.css
@@ -4,51 +4,48 @@
 }
 footer {
   background-color: #fe97c4;
-  color: #ffffff;
+  color: white;
   font-family: Comic Sans MS;
   font-style: italic;
-}
-.footer-container {
   display: flex;
   position: relative;
-  font-size: 15px;
+  font-size: 0.9rem;
   letter-spacing: 2px;
   max-width: 100vw;
+  justify-content: space-between;
 }
+
 .footer-information {
-  padding: 20px 100px;
+  margin-left: 4%;
 }
 
 .footer-information h4 {
-  padding-top: 50px;
-  padding-left: 40px;
+  margin-top: 50px;
+  margin-left: 40px;
   font-weight: bold;
 }
-.footer-catagory {
+.footer-category {
   display: flex;
 }
 
 .footer-copyright {
-  padding: 4px 40px;
+  margin: 30px 0 0 40px;
 }
 
-.footer-logo {
-  position: absolute;
-  right: 150px;
-  top: 75px;
-  width: 20vw;
-}
 .heart {
   color: red;
 }
-.footer-sugarrush {
+.footer-sugarRush {
   display: flex;
-  flex-direction: column-reverse;
+  flex-direction: column;
+  max-width: 20vw;
+  align-items: center;
+  justify-content: center;
+  margin: 30px 50px;
 }
-.social-media {
-  position: absolute;
-  right: 190px;
-  bottom: 80px;
+.footer-logo {
+  min-width: 125px;
+  width: 15vw;
 }
 .social-media img {
   width: 45px;
