--- a/client/src/components/header/header.css
+++ b/client/src/components/header/header.css
@@ -6,6 +6,14 @@
   height: 450px;
   position: relative;
 }
+.header-allProducts {
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  background-color: #fee588;
+  position: relative;
+  height: 250px;
+}
 
 .header-logo {
   width: 20vw;
@@ -125,7 +133,7 @@
   background-color: #05e0dc;
 }
 
-.header-category-list-invisible {
+.invisible {
   opacity: 0;
   cursor: default;
 }
@@ -134,6 +142,9 @@
   /* styles for phones */
   .header {
     height: 30vh;
+  }
+  .header-allProducts {
+    height: 20vh;
   }
   .header-logo {
     left: 0px;
