--- a/client/src/components/header/header.css
+++ b/client/src/components/header/header.css
@@ -28,11 +28,13 @@
   flex-direction: row;
   justify-content: space-evenly;
 }
-
+.nav-buttons {
+  margin: 0;
+}
 .header-search-block {
   display: flex;
   flex-direction: column;
-  margin: 120px 0 0 40%;
+  margin: 100px 0 0 40%;
   width: 20%;
 }
 
@@ -79,29 +81,40 @@
   color: black;
 } */
 
-/* .header-favorites-button {
+.header-favorites-button {
   margin: 5px;
   height: 25px;
   cursor: pointer;
-} */
+}
 
-/* .header-buttons {
+.header-buttons {
   display: flex;
-  flex-direction: row;
-  width: 20vw;
-  height: 10vh;
-  justify-content: center;
-} */
+  flex-direction: column;
+  width: 220px;
+  height: 50px;
+  align-items: baseline;
+}
 
+.cart-and-favorites-buttons {
+  display: flex;
+  align-items: baseline;
+}
 .header-favorites-button-image {
   height: 20px;
   width: 20px;
 }
 
 .header-cart-button {
-  margin: 5px;
-  height: 25px;
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+  height: 45px;
   cursor: pointer;
+}
+.cart-sum {
+  margin: 5px;
+  padding: 0;
+  color: #fe97c4;
 }
 
 .header-cart-button-image {
@@ -161,7 +174,6 @@
     line-height: normal;
   }
   .header-donut {
-    /* position: absolute; */
     top: 0;
     right: 0;
     float: left;
