--- a/client/src/components/header/header.css
+++ b/client/src/components/header/header.css
@@ -154,17 +154,20 @@
 @media (max-width: 767px) {
   /* styles for phones */
   .header {
-    height: 30vh;
+    height: 40vh;
+    justify-content: center;
   }
   .header-allProducts {
     height: 20vh;
   }
   .header-logo {
-    left: 0px;
+    margin-top: 20px;
+    left: 30px;
+    min-width: 60px;
   }
   .header-search-block {
     width: 30vw;
-    /* max-width: 150px; */
+
     margin: 60px 0px 0px 100px;
   }
   .header-title {
@@ -178,6 +181,7 @@
     right: 0;
     float: left;
     width: 10vw;
+    min-width: 30px;
   }
 }
 
