--- a/client/src/components/personalInfo/PersonalInfo.css
+++ b/client/src/components/personalInfo/PersonalInfo.css
@@ -1,14 +1,34 @@
 .personal-form {
   display: flex;
+  margin: 0 auto;
   flex-direction: column;
   width: 300px;
   align-items: flex-end;
+}
+
+.personal-input {
+  margin: 10px;
+  border: 1px solid #05e0dc;
+  border-radius: 5px;
 }
 
 .input-warn {
   border: 3px solid red;
 }
 
-.personal-input {
-  margin: 10px;
+.personal-form-label {
+  font-size: 1.1rem;
+  line-height: 1.3rem;
+  color: black;
+}
+
+.personal-info-button {
+  margin: 10px auto 30px;
+  width: 150px;
+  height: 40px;
+  border-radius: 10px;
+  cursor: pointer;
+  background-color: #fe97c4;
+  color: white;
+  font-size: 1.4rem;
 }
