--- a/client/src/components/Summary/Summary.css
+++ b/client/src/components/Summary/Summary.css
@@ -1,16 +1,52 @@
 .cart-summary {
   display: flex;
   flex-direction: column;
+  background-color: #fe97c4;
+  width: 30%;
+  margin: 30px 0 30px 50%;
 }
 
 .cart-summary-text {
-  margin: 10px auto;
-  color: #fe97c4;
+  display: flex;
+  justify-content: space-between;
+  margin: 0 0 20px 30px;
+  color: black;
   font-size: 1.2rem;
+  letter-spacing: 1px;
 }
 
 .cart-summary-page-title {
-  margin: 20px auto;
-  color: #fe97c4;
+  margin: 20px 0 20px 30px;
+  color: black;
   font-size: 2rem;
+  letter-spacing: 2px;
+  font-weight: 200;
+}
+
+.cart-summary-price {
+  margin: 0 30px;
+}
+
+.cart-payment-link {
+  width: 80%;
+  text-decoration: none;
+  text-align: center;
+  color: #fe97c4;
+  font-size: 1.2rem;
+  letter-spacing: 2px;
+  margin: 20px auto;
+  background-color: #fee588;
+  padding: 10px;
+}
+
+.cart-payment-link-container {
+  display: flex;
+  width: 100%;
+}
+
+@media (max-width: 768px) {
+  .cart-summary {
+    width: 80%;
+    margin: 30px 0 30px 10%;
+  }
 }
