--- a/client/src/pages/AllProducts/allProducts.css
+++ b/client/src/pages/AllProducts/allProducts.css
@@ -11,6 +11,7 @@
   flex-direction: column;
   width: 100vw;
 }
+
 .invisible {
   width: 0px;
   height: 0px;
@@ -85,9 +86,17 @@
   border-radius: 5px;
 }
 
-.product-overview p {
+.product-overview > p {
   margin: 0;
   font-size: 1.2em;
+}
+
+.product-overview-name {
+  color: black;
+  font-size: 1.2em;
+  text-decoration: none;
+  display: inline-block;
+  margin: 5px 0 15px;
 }
 
 .product-overview img {
@@ -143,11 +152,13 @@
   display: flex;
   gap: 15px;
 }
+
 #min,
 #max {
   background-color: transparent;
   border: none;
 }
+
 @media (max-width: 767px) {
   /* styles for phones */
   .product-page-title {
