--- a/client/src/pages/ProductPage/ProductPage.css
+++ b/client/src/pages/ProductPage/ProductPage.css
@@ -1,3 +1,92 @@
-.product-center {
-  margin: 40px auto;
+.product-page-center {
+  margin: 30px 0 0 15.25%;
+  display: flex;
+}
+
+.product-page-title {
+  width: 70%;
+  margin: 30px 0 0 15.25%;
+  font-size: 2.6rem;
+  line-height: 2.8rem;
+}
+
+.product-page-rating {
+  margin: 30px 0 0 15.25%;
+}
+
+.product-page-image {
+  width: 35%;
+  object-fit: contain;
+}
+
+.product-page-description-block {
+  display: flex;
+  flex-direction: column;
+  margin: 0 0 0 5%;
+  width: 45%;
+}
+
+.product-page-price {
+  font-size: 2.6rem;
+  line-height: 2.8rem;
+  color: #f19cbd;
+  font-weight: 900;
+  margin: 0;
+}
+
+.product-page-description-title {
+  font-size: 1.3rem;
+  line-height: 1.5rem;
+  font-weight: 500;
+  letter-spacing: 3px;
+  margin: 60px 0 0 0;
+}
+
+.product-page-description {
+  font-size: 1.1rem;
+  line-height: 1.3rem;
+  font-weight: 400;
+  margin: 60px 0 0 0;
+}
+
+.product-page-basket-favorite {
+  margin: 60px 0 0 0;
+  display: flex;
+  gap: 40px;
+}
+
+.product-page-recommend-block {
+  margin: 60px 0 60px 15.25%;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 30px;
+}
+
+.product-page-recommend-title {
+  margin: 60px 0;
+  width: 100%;
+  font-size: 2.9rem;
+  line-height: 3.1rem;
+  color: #f19cbd;
+}
+
+@media (min-width: 768px) and (max-width: 1024px) {
+  .product-page-title {
+    margin: 80px 0 0 15.25%;
+    border: 1px solid red;
+  }
+}
+
+@media (max-width: 767px) {
+  .product-page-center {
+    display: flex;
+    flex-direction: column;
+  }
+  .product-page-image {
+    width: 80%;
+  }
+  .product-page-description-block {
+    width: 80%;
+    margin: 20px 0 0 5%;
+  }
 }
