--- a/client/src/pages/AllProducts/allProducts.css
+++ b/client/src/pages/AllProducts/allProducts.css
@@ -88,6 +88,7 @@
 .product-name {
   font-weight: bold;
 }
+
 .product-price {
   color: #f095c4;
   font-size: 2.1rem;
@@ -105,6 +106,7 @@
   width: 100%;
   margin: 1em 0;
 }
+
 .white-background {
   display: flex;
   flex-direction: column;
@@ -141,12 +143,15 @@
 }
 
 .filter-reset-button {
-  width: 300px;
+  width: 40%;
+  padding: 10px 0;
   margin: 30px auto;
   background-color: #f19cbd;
+  color: white;
   cursor: pointer;
-  border: 2px solid #fff;
-  border-radius: 30%;
+  border: none;
+  font-size: 1.1rem;
+  letter-spacing: 2px;
 }
 
 .sorting-active {
