--- a/client/src/pages/ProductPage/ProductPage.css
+++ b/client/src/pages/ProductPage/ProductPage.css
@@ -70,6 +70,15 @@
   color: #f19cbd;
 }
 
+.search-result-page-title {
+  width: 100%;
+  margin: 20px auto;
+  text-align: center;
+  font-size: 2rem;
+  letter-spacing: 2px;
+  color: #f19cbd;
+}
+
 @media (min-width: 768px) and (max-width: 1024px) {
   .product-page-title {
     margin: 80px 0 0 15.25%;
