--- a/client/src/components/promotion/promotion.css
+++ b/client/src/components/promotion/promotion.css
@@ -21,7 +21,8 @@
 .promotion-title {
   color: white;
   width: 40vw;
-  font-size: 3.7rem;
+  font-family: "Abril Fatface";
+  font-size: 3rem;
 }
 
 .promotion-button {
