--- a/client/src/pages/ProductPage/ProductPage.css
+++ b/client/src/pages/ProductPage/ProductPage.css
@@ -79,10 +79,93 @@
   color: #f19cbd;
 }
 
+.show-review-block {
+  margin: 60px 15.25% 60px;
+}
+
+.show-review-title {
+  font-size: 2.2rem;
+  line-height: 2.4rem;
+  color: #f19cbd;
+  font-weight: 900;
+}
+
+.show-review-name {
+  background-color: #f19cbd;
+  color: white;
+  display: inline-block;
+  padding: 5px;
+  font-size: 1.2rem;
+  letter-spacing: 2px;
+}
+
+.show-review-comment {
+  border: 2px solid #f19cbd;
+  padding: 15px;
+  display: inline-block;
+  font-size: 1.2rem;
+  letter-spacing: 2px;
+}
+
+.create-review-leave-button {
+  display: block;
+  margin: 30px auto;
+  width: 30%;
+  background-color: #f19cbd;
+  border: none;
+  color: white;
+  font-size: 1.2rem;
+  padding: 10px;
+  letter-spacing: 2px;
+  cursor: pointer;
+}
+
+.review-adding-block {
+  margin: 60px 15.25% 60px;
+}
+
+.review-adding-label {
+  display: inline-block;
+  font-size: 1.2rem;
+  letter-spacing: 2px;
+}
+
+.review-adding-text {
+  border: none;
+  margin-bottom: 20px;
+  padding: 5px;
+}
+
+.review-adding-textarea {
+  border: none;
+  width: 200%;
+  padding: 5px;
+  height: 100px;
+  margin-bottom: 20px;
+}
+
+.review-adding-submit {
+  width: 30%;
+  background-color: #f19cbd;
+  border: none;
+  color: white;
+  font-size: 1.2rem;
+  padding: 10px;
+  letter-spacing: 2px;
+  cursor: pointer;
+}
+
+.review-adding-confirm {
+  font-size: 1.2rem;
+  line-height: 1.4rem;
+  color: #f19cbd;
+  font-weight: 900;
+  letter-spacing: 2px;
+}
+
 @media (min-width: 768px) and (max-width: 1024px) {
   .product-page-title {
     margin: 80px 0 0 15.25%;
-    border: 1px solid red;
   }
 }
 
@@ -97,5 +180,8 @@
   .product-page-description-block {
     width: 80%;
     margin: 20px 0 0 5%;
+  }
+  .review-adding-textarea {
+    width: 100%;
   }
 }
