--- a/client/src/components/header/header.css
+++ b/client/src/components/header/header.css
@@ -1,8 +1,13 @@
 .header {
   width: 100%;
+  height: 600px;
   display: flex;
   justify-content: center;
   background-color: #fee588;
+}
+.header-elements {
+  width: 100%;
+  padding: 0 7rem 0 7rem;
 }
 .header-allProducts {
   width: 100%;
@@ -17,6 +22,7 @@
   margin-top: 2rem;
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
 
 .header-logo {
@@ -26,14 +32,20 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  width: 70%;
 }
 .top-section {
-  width: 700px;
   display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 .bottom-section {
-  margin-top: 1rem;
+  position: relative;
+  width: 400px;
   display: flex;
+  justify-content: space-between;
+  align-items: center;
+  top: 1rem;
 }
 
 .nav-bar {
@@ -49,14 +61,13 @@
   display: flex;
   flex-direction: column;
   margin: 100px 0 0 40%;
-  width: 20%;
 }
 
 .header-search-input {
   width: 400px;
   height: 40px;
-  border: none; /* Remove border */
-  border-radius: 3px; /* Apply rounded corners */
+  border: none;
+  border-radius: 3px;
   font-family: "Comfortaa", cursive;
   font-size: 1;
   padding-left: 20px;
@@ -67,19 +78,24 @@
   margin: 0;
   display: flex;
   justify-content: center;
-  height: 2rem;
-  position: relative;
 }
 
 .header-category-list {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
   position: absolute;
-  top: 20px;
-  right: 15px;
-  width: 200px;
+  top: 100%;
+  left: 0;
+  width: 100%;
+  background-color: rgba(255, 255, 255, 0.3);
+  display: flex;
+  flex-direction: column;
+  align-items: left;
 }
 
 .header-category-arrow {
-  margin-left: 0.5rem;
+  position: relative;
 }
 .header-category-arrow:hover {
   color: #fe97c4;
@@ -87,9 +103,9 @@
 
 .all-products-link {
   color: black;
-  margin-left: 3.5rem;
+  margin-left: 1rem;
   font-family: "Comfortaa", cursive;
-  font-size: 1.2em;
+  font-size: 1em;
   text-decoration: none;
 }
 .all-products-link:active {
@@ -98,26 +114,33 @@
 
 .header-category-title {
   font-family: "Comfortaa", cursive;
-  font-size: 1.2em;
+  font-size: 1em;
+  position: relative;
+  top: 4px;
   margin: 0;
   padding: 0;
 }
 
 .header-category-list-item {
-  cursor: pointer;
-  background-color: white;
-  font-family: "Comfortaa", cursive;
-  font-size: 1.2em;
-  line-height: 1.7rem;
-  text-align: center;
 }
 
 .header-category-list-item a {
   text-decoration: none;
+  cursor: pointer;
+  font-family: "Comfortaa", cursive;
+  font-size: 1em;
+  line-height: 1.3rem;
+  font-style: italic;
+  font-weight: 300;
+  display: inline-block; /* Display as inline block to remove the default list item bullet point */
+  color: black;
+}
+
+.header-category-list-item a:hover {
+  color: #fe97c4;
 }
 
 .header-favorites-button {
-  margin: 5px;
   height: 25px;
   cursor: pointer;
 }
@@ -137,7 +160,6 @@
 
 .header-favorites-button-image {
   color: black;
-  margin-left: 140px;
 }
 
 .header-favorites-button-image:hover {
@@ -171,7 +193,9 @@
   cursor: pointer;
 }
 .cart-sum {
-  margin: 5px;
+  font-family: "Comfortaa", cursive;
+  font-size: 1.2em;
+
   padding: 0;
   color: #fe97c4;
 }
@@ -183,6 +207,7 @@
   font-size: 3em;
   line-height: 3.3rem;
   text-align: center;
+  width: 100%;
 }
 
 .header-donut {
@@ -192,11 +217,15 @@
 
 .header-search-suggestion {
   text-decoration: none;
-  color: white;
-  margin: 15px;
+  margin: 5px 15px 0 15px;
   font-family: "Comfortaa", cursive;
   font-size: 1em;
-  /* line-height: 0.5; */
+  line-height: 1.3rem;
+  font-style: italic;
+  font-weight: 300;
+  cursor: pointer;
+  display: inline-block; /* Display as inline block to remove the default list item bullet point */
+  color: black;
 }
 
 .header-search-suggestion:hover {
