--- a/client/src/components/header/header.css
+++ b/client/src/components/header/header.css
@@ -126,12 +126,12 @@
   width: 50%;
   max-width: 70vw;
   margin: 3% auto 15%;
-
   color: #fe97c4;
   font-size: 3em;
-  font-weight: 900;
+  font-weight: 1;
   line-height: 3.3rem;
   text-align: center;
+  font-family: "Abril Fatface";
 }
 
 .header-donut {
