--- a/client/src/pages/AllProducts/allProducts.css
+++ b/client/src/pages/AllProducts/allProducts.css
@@ -57,6 +57,7 @@
 }
 
 .sorting-button {
+  color: black;
   margin: 5px;
   padding: 15px;
   background: none;
@@ -141,7 +142,7 @@
   display: flex;
   align-self: center;
   justify-content: space-evenly;
-  width: 100%;
+  width: 65%;
 }
 
 .product-overview div {
@@ -219,5 +220,8 @@
   }
   .filter-block {
     margin-left: 10%;
+  }
+  .product-display-grid {
+    margin-left: 14%;
   }
 }
