--- a/client/src/components/category/categories.css
+++ b/client/src/components/category/categories.css
@@ -123,7 +123,7 @@
   flex-direction: column;
   align-items: center;
   width: 13.5rem;
-  height: 15rem;
+  height: 14rem;
   text-align: center;
   position: absolute;
   top: 10rem;
@@ -149,17 +149,18 @@
 }
 
 .category-button-main {
-  background: none;
+  color: white;
+  background-color: #f095c4;
   border: none;
   font-family: "Comfortaa", cursive;
-  font-size: 1em;
-  font-weight: 800;
-  background-color: #fe97c4;
+  font-size: 15px;
+  width: 300px;
+  height: 45px;
   position: relative;
-  top: 5rem;
+  top: 4rem;
 }
 
 .category-button-main:hover {
-  color: red;
+  font-style: italic;
   cursor: pointer;
 }
