--- a/client/src/components/promotion/promotion.css
+++ b/client/src/components/promotion/promotion.css
@@ -43,35 +43,47 @@
 }
 
 .promotion-button:hover {
+  font-style: italic;
   cursor: pointer;
 }
 
 .promotion-popup {
   position: absolute;
-  left: 30%;
-  top: 25%;
+  left: 40rem;
+  top: 0rem;
   background-color: #f095c4;
   color: white;
-  width: 40vw;
-  height: 70vh;
+  width: 47vw;
+  height: 600px;
   z-index: 10;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  box-shadow: 4px -4px black;
-  border-radius: 20px;
 }
 
 .promotion-popup-text {
-  font-size: 1.2rem;
-  padding: 5px;
+  font-family: "Comfortaa", cursive;
+  font-size: 1em;
+  font-style: italic;
+  font-weight: 300;
+  padding-left: 3rem;
+  padding-right: 3rem;
+  text-align: center;
+  position: relative;
+  top: 3rem;
 }
 
 .promotion-popup-link {
-  margin: 0 auto;
-  font-size: 2rem;
+  font-family: "Comfortaa", cursive;
+  text-align: center;
+  padding-top: 100px;
+  font-size: 1rem;
   text-decoration: none;
   color: white;
+}
+
+.promotion-popup-link:hover {
+  font-style: italic;
 }
 
 .promotion-popup-multiply {
