--- a/client/src/components/category/categories.css
+++ b/client/src/components/category/categories.css
@@ -1,92 +1,6 @@
-/* .category-div {
-  display: flex;
-  flex-direction: column;
-  background-color: #fee588;
-}
-.category-title {
-  font-family: "Abril Fatface", cursive;
-  font-weight: 10;
-  color: #fe97c4;
-  font-size: 3em;
-  margin: 5rem;
-  text-align: center;
-}
-.categories-main-container {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-gap: 10px;
-  justify-items: center;
-  margin-bottom: 5rem;
-}
-.categories-container {
-  position: relative;
-  width: 400px;
-  height: 400px;
-  margin-right: 20px;
-  margin-bottom: 200px;
-}
-.categories-image {
-  position: "absolute";
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-.categories-layer {
-  position: relative;
-  bottom: 80%;
-  left: 13%;
-  background: rgba(245, 245, 245, 0.7);
-  height: 400px;
-  width: 300px;
-}
-.categories-text {
-  position: relative;
-  font-weight: bold;
-  color: black;
-  font-size: 24px;
-  text-align: center;
-}
-.categories-header-text {
-  font-family: "Abril Fatface", cursive;
-  font-weight: 10;
-  color: #3f3e3e;
-  font-size: 2em;
-  text-align: center;
-}
-.categories-description {
-  font-family: "Comfortaa", cursive;
-  font-size: 0.8em;
-  font-weight: 500;
-  color: #3f3e3e;
-  padding: 2rem;
-}
-.categories-button {
-  position: absolute;
-  bottom: -50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  color: #f095c4;
-  font-weight: bold;
-  font-size: 24px;
-  text-align: center;
-  border-color: #f095c4;
-  background: none;
-}
-.categories-button:hover {
-  background-color: #f095c4;
-  color: white;
-  cursor: pointer;
-}
-@media (max-width: 767px) {
-  .categories-container {
-    width: 300px;
-  }
-} */
-
 .category {
-  height: 65rem;
+  height: 70rem;
+  width: 100%;
 }
 .category-main-title {
   font-family: "Abril Fatface", cursive;
@@ -163,4 +77,35 @@
 .category-button-main:hover {
   font-style: italic;
   cursor: pointer;
+}
+
+@media (max-width: 1200px) {
+  .categories-container {
+    grid-template-columns: repeat(2, 1fr);
+    padding: 0 7rem 0 7rem;
+  }
+  .category {
+    height: 100rem;
+  }
+}
+
+@media (max-width: 885px) {
+  .categories-container {
+    grid-template-columns: repeat(1, 1fr);
+    justify-items: center;
+    grid-row-gap: 180px;
+    padding: 0 7rem 0 7rem;
+  }
+  .category {
+    height: 155rem;
+  }
+}
+
+@media (max-width: 500px) {
+  .categories-container {
+    grid-template-columns: repeat(1, 1fr);
+    justify-items: center;
+    grid-row-gap: 180px;
+    padding: 0 2rem 0 2rem;
+  }
 }
