--- a/client/src/pages/cart/cart.css
+++ b/client/src/pages/cart/cart.css
@@ -1,21 +1,110 @@
-.cart-options {
+/* Start of cart header styles */
+.cart-header {
   display: flex;
-  flex-direction: column;
-  justify-self: center;
+  align-items: center;
   position: relative;
-  top: -50px;
-  min-width: 100px;
-  width: 12vw;
-  gap: 8px;
+  padding-top: 50px;
+  flex-wrap: wrap;
 }
-.cart-options button {
-  display: flex;
-  align-self: center;
-  justify-content: center;
-  background: none;
-  border: none;
+.cart-header h1 {
+  color: #fe97c4;
+  position: absolute;
+  left: 15%;
+}
+.cart-header a {
+  position: absolute;
+  right: 20%;
+  text-decoration: none;
+  border: 2px solid #fe97c4;
+  padding: 7px;
+}
+.cart-header a:hover {
   color: white;
-  width: 50%;
-  background-color: #f095c4;
+  background-color: #fe97c4;
+}
+
+/* End of cart header styles */
+
+/* -------------------------------------- */
+
+/* Start of cart bar styles */
+.cart-bar {
+  padding-top: 50px;
+  width: 80%;
+  padding-left: 15%;
+}
+.cart-bar-items {
+  display: flex;
+  background-color: #fe97c4;
+  justify-content: space-around;
+  color: white;
+  font-size: 22px;
+  letter-spacing: 1px;
+  font-weight: bold;
+  font-style: italic;
+}
+/* End of  cart bar styles  */
+
+/* -------------------------------------- */
+/* Start of cart items styles*/
+.cart-items {
+  margin: 0 20% 0 15%;
+}
+.cart-item {
+  background: rgba(245, 245, 245, 0.7);
+  display: flex;
+  margin-bottom: 7px;
+  position: relative;
+  flex-wrap: wrap;
+}
+.cart-item img {
+  width: 200px;
+  padding-left: 25px;
+}
+
+.cart-item .title-price {
+  display: flex;
+}
+.cart-item .product-name a {
+  width: 200px;
+  margin: 20px;
+}
+.cart-item .product-price {
+  position: absolute;
+  left: 35%;
+  top: 50%;
+}
+.cart-item .cart-counter {
+  position: absolute;
+  right: 33%;
+  top: 75%;
+  border: 1px solid black;
+  padding: 2px 15px;
+}
+.cart-item .cart-counter button {
+  border: none;
+  background-color: inherit;
+  font-size: 20px;
   cursor: pointer;
 }
+.cart-item .cart-counter button:hover {
+  color: #fe97c4;
+}
+.total-item-price {
+  position: absolute;
+  right: 10%;
+  top: 50%;
+  font-size: 2.1rem;
+  color: #fe97c4;
+}
+.trash-icon {
+  position: absolute;
+  left: 15%;
+  background-color: inherit;
+  border: none;
+  cursor: pointer;
+}
+.trash-icon:hover {
+  color: #fe97c4;
+}
+/* End of cart items styles */
