refining styling for all product page

--- a/client/src/components/ProductDisplay/Rating.css
+++ b/client/src/components/ProductDisplay/Rating.css
@@ -1,3 +1,9 @@
 .hover-star {
-  color: yellow;
+  color: #f095c4;
+}
+
+.thanks-rating {
+  border: none;
+  font-family: "Comfortaa", cursive;
+  font-size: 15px;
 }
