--- a/client/src/pages/AllProducts/allProducts.css
+++ b/client/src/pages/AllProducts/allProducts.css
@@ -3,7 +3,6 @@
 .sorting-button,
 .categories {
   font-family: Comfortaa;
-  font-weight: 1;
 }
 .product-page-title {
   font-family: "Abril Fatface";
@@ -34,7 +33,6 @@
   margin-left: 12%;
   margin-bottom: 30px;
   width: 75vw;
-  height: 120px;
 }
 
 .category-button {
@@ -45,6 +43,7 @@
 
 .category-button:hover {
   color: #f19cbd;
+  font-style: italic;
   cursor: pointer;
 }
 
@@ -55,7 +54,7 @@
   justify-content: space-evenly;
   flex-wrap: wrap;
   margin-left: 12%;
-  margin-bottom: 70px;
+  margin-bottom: 2%;
 }
 
 .sorting-button {
@@ -161,19 +160,21 @@
 }
 
 .filter-reset-button {
-  font-family: "Abril Fatface";
-  font-weight: 100;
-  width: 75vw;
+  color: white;
+  background-color: #f095c4;
+  border: none;
+  font-family: "Comfortaa", cursive;
+  font-size: 15px;
+  width: 300px;
+  height: 45px;
   padding: 10px 0;
   margin: 30px auto;
   margin-left: 12%;
-  background-color: #f19cbd;
-  border-radius: 5px;
-  color: white;
+}
+
+.filter-reset-button:hover {
+  font-style: italic;
   cursor: pointer;
-  border: none;
-  font-size: 1.3rem;
-  letter-spacing: 2px;
 }
 
 .sorting-active {
@@ -199,11 +200,13 @@
   justify-content: space-evenly;
   align-items: center;
   width: 75vw;
+  height: 7rem;
   padding: 15px;
   border: 3px solid #f19cbd;
 }
 
 .price-slider {
+  font-family: "Comfortaa";
   font-size: 1.1rem;
   display: flex;
   gap: 10px;
@@ -215,6 +218,11 @@
   background-color: #f095c4;
   border: none;
   border-radius: 5px;
+  height: 2rem;
+  width: 7rem;
+  font-size: 1.1rem;
+  padding-left: 0.5rem;
+  margin-left: 0.5rem;
 }
 #min,
 #max,
@@ -222,6 +230,12 @@
 .in-stock-checkbox {
   font-family: "Comfortaa";
 }
+
+input[type="number"] {
+  appearance: none;
+  -moz-appearance: textfield;
+}
+
 @media (max-width: 767px) {
   /* styles for phones */
   .product-page-title {
