--- a/client/src/pages/cart/cart.css
+++ b/client/src/pages/cart/cart.css
@@ -9,11 +9,16 @@
 }
 .cart-header h1 {
   color: #fe97c4;
+  font-family: "Abril Fatface";
+  font-style: normal;
+  font-weight: 400;
+  letter-spacing: 1px;
 }
 .cart-header a {
   text-decoration: none;
   border: 2px solid #fe97c4;
   padding: 7px;
+  font-family: "Comfortaa";
 }
 .cart-header a:hover {
   color: white;
@@ -103,6 +108,11 @@
 }
 .trash-icon:hover {
   color: #fe97c4;
+}
+.product-amount {
+  font-family: "Comfortaa";
+  font-size: 17px;
+  font-weight: bold;
 }
 /* End of cart items styles */
 /* -------------------------------------- */
